force-app/main/default/objects/QuoteLineItem/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>UnitPrice * Quantity * (VALUE( 
    IF( 
        ISBLANK(Tax_Rate__c), 
        &quot;0&quot;, 
        Tax_Rate__c
    )
) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>