force-app/main/default/objects/QuoteLineItem/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>