force-app/main/default/objects/QuoteLineItem/fields/Total_Price_Including_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Including_Tax__c</fullName>
    <formula>(UnitPrice * Quantity) + Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Including Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>